# lrstar

./: .gitignore  CMakeLists.txt  ComGenerate.cpp  ComGenerate.h  ComGlobal.cpp  ComGlobal.h  ComMain.cpp  LG.grm  LG.grm.conflicts.txt  LG.grm.grammar.txt  LG.grm.log.txt  LG.grm.states.txt  LG.grm.warnings.txt  LG.lex  LG.lgr  LG.lgr.conflicts.txt  LG.lgr.grammar.txt  LG.lgr.log.txt  LGActions.cpp  LGActions.h  LGAddExtra.cpp  LGAddExtra.h  LGBuildStates.cpp  LGBuildStates.h  LGCheckGrammar.cpp  LGCheckGrammar.h  LGComputeLA.cpp  LGComputeLA.h  LGCreateTables.cpp  LGCreateTables.h  LGGenerate.h  LGGenerateCode.cpp  LGGlobal.h  LGLexer.cpp  LGLexer.cpp.skl  LGLexer.h  LGLexer.h.skl  LGMain.cpp  LGOptimizeStates.cpp  LGOptimizeStates.h  (+53 more)
cmake/: CMakeLists.txt  lrstar-config.cmake.in  lrstar-macro.cmake
doc/: documentation.html  lrstar_license.txt
grm/: ada.grm  basic.grm  c++.grm  c.grm  c.lgr  calc.grm  calc.lgr  cics.grm  cobol.grm  dbase.grm  fortran.grm  html.grm  modula2.grm  ncsalog.grm  pascal.grm  pl1.grm  plm.grm  sql.grm  vbasic.grm  verilog.grm  xpl.grm  zeus.grm
msvc/: LRStar.sln
msvc/Calc/: Calc.vcxproj  Calc.vcxproj.filters
msvc/LRStar/: LRStar.sln  LRStar.vcxproj  LRStar.vcxproj.filters
packaging/arch/: PKGBUILD
project/c/: c.grm  c.grm.conflicts.txt  c.grm.log.txt  c.grm.warnings.txt  c.lex  c.lgr  c.lgr.conflicts.txt  c.lgr.log.txt  c.lgr.warnings.txt  c_actions.cpp  c_actions.h  c_lexer.cpp  c_lexer.h  c_main.cpp  c_parser.cpp  c_parser.h  make.bat  test.input.txt  workspace.vcproj
project/calc/: calc.grm  calc.grm.conflicts.txt  calc.grm.grammar.txt  calc.grm.log.txt  calc.grm.states.txt  calc.lex  calc.lgr  calc.lgr.conflicts.txt  calc.lgr.grammar.txt  calc.lgr.log.txt  calc.lgr.warnings.txt  calc_actions.cpp  calc_actions.h  calc_lexer.cpp  calc_lexer.h  calc_main.cpp  calc_parser.cpp  calc_parser.h  make.bat  test.input.txt  test.output.txt  workspace.vcproj
project/calc1/: calc1.grm  calc1.grm.grammar.txt  calc1.grm.log.txt  calc1.grm.warnings.txt  calc1.lex  calc1.lgr  calc1.lgr.conflicts.txt  calc1.lgr.log.txt  calc1.lgr.states.txt  calc1.lgr.warnings.txt  calc1_actions.cpp  calc1_actions.h  calc1_lexer.cpp  calc1_lexer.h  calc1_main.cpp  calc1_parser.cpp  calc1_parser.h  make.bat  test.input.txt  test.output.txt  workspace.sln  workspace.vcproj
skels/: CMakeLists.txt
skl/: parser.h.skl
(+82 files in other folders)
